# frame-ai

./: .gitignore  CMakeLists.txt  Dockerfile  IMPLEMENTATION.md  PLAN (1).md  README.md  SKILL (2).md  design.html  plan.md  wrangler.toml
src/: image.cpp  image.h  main.cpp  model.cpp  model.h  prompt.cpp  prompt.h  server.cpp  server.h  utils.cpp  utils.h
web/: app.js  config.js  index.html  style.css
